style: fix counter-plus

--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="swiper-slide">
+                                    <!-- <div class="swiper-slide">
                                         <div class="row">
                                             <div
                                                 class="slider__text-wrapper rg-1 d-flex flex-column align-items-start rg-1 col-12 col-md-7 col-lg-6 col-xl-8 text-body-wrapper"
@@ -783,7 +783,7 @@
                                                 />
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="swiper-slide">
                                         <div class="row">
                                             <div
@@ -848,7 +848,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="swiper-slide">
+                                    <!-- <div class="swiper-slide">
                                         <div class="row">
                                             <div
                                                 class="slider__text-wrapper rg-1 d-flex flex-column align-items-start rg-1 col-12 col-md-7 col-lg-6 col-xl-8 text-body-wrapper"
@@ -881,18 +881,18 @@
                                                 />
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev d-none d-md-flex">
+                        <div class="swiper-button-prev d-md-flex">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
                                 ></use>
                             </svg>
                         </div>
-                        <div class="swiper-button-next d-none d-md-flex">
+                        <div class="swiper-button-next d-md-flex">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
@@ -1011,24 +1011,13 @@
                                         >500</span
                                     ><span class="counter-addon counter-plus"
                                         ><svg
+                                            class="icon"
                                             width="24"
                                             height="24"
-                                            viewBox="0 0 24 25"
-                                            fill="none"
-                                            xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                fill-rule="evenodd"
-                                                clip-rule="evenodd"
-                                                d="M12 4.5C12.5523 4.5 13 4.94772 13 5.5V19.5C13 20.0523 12.5523 20.5 12 20.5C11.4477 20.5 11 20.0523 11 19.5V5.5C11 4.94772 11.4477 4.5 12 4.5Z"
-                                                fill="#D13A1F"
-                                            />
-                                            <path
-                                                fill-rule="evenodd"
-                                                clip-rule="evenodd"
-                                                d="M4 12.5C4 11.9477 4.44772 11.5 5 11.5H19C19.5523 11.5 20 11.9477 20 12.5C20 13.0523 19.5523 13.5 19 13.5H5C4.44772 13.5 4 13.0523 4 12.5Z"
-                                                fill="#D13A1F"
-                                            />
+                                            <use
+                                                href="/assets/icons/sprite.svg#icon-counter-plus"
+                                            ></use>
                                         </svg>
                                     </span>
                                 </p>
@@ -1074,7 +1063,6 @@
         <!-- Footer End -->
         <script src="template/lib/swiper/swiper-bundle.min.js"></script>
         <script src="template/js/Mobile-panel.js"></script>
-        <!-- <script src="template/js/UpdateDynamicProperty.js"></script> -->
         <script src="template/js/ToggleSubmenu.js"></script>
         <script src="template/js/main.js"></script>
     </body>
