fix: prohibit body scrolling in mobil-panel

--- a/index.html
+++ b/index.html
@@ -185,8 +185,17 @@
                                 <a
                                     href="index.html"
                                     class="nav__link link-action text-uppercase hover-accent"
-                                    >Услуги и&nbsp;цены</a
-                                >
+                                    >Услуги и&nbsp;цены
+                                    <svg
+                                        class="icon first-level-icon"
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="/assets/icons/sprite.svg#icon-nose"
+                                        ></use>
+                                    </svg>
+                                </a>
                                 <ul class="nav__list nav__sublist">
                                     <!-- Второй уровень -->
                                     <li class="nav__item nav__item--child">
@@ -195,7 +204,7 @@
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Разработка сайтов
                                             <svg
-                                                class="nav__icon--open icon-open"
+                                                class="icon nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
@@ -204,7 +213,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close hidden"
+                                                class="icon nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -348,7 +357,7 @@
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Продвижение сайтов
                                             <svg
-                                                class="nav__icon--open icon-open"
+                                                class="icon nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
@@ -357,7 +366,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close hidden"
+                                                class="icon nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -420,7 +429,7 @@
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Техническая поддержка
                                             <svg
-                                                class="nav__icon--open icon-open"
+                                                class="icon nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
@@ -429,7 +438,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close hidden"
+                                                class="icon nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -549,7 +558,7 @@
                                             href="index.html"
                                             class="nav__link--child link-action hover-accent d-flex-start-center gap-2"
                                             ><svg
-                                                class="nav__icon"
+                                                class="icon nav__icon"
                                                 width="40"
                                                 height="40"
                                             >
@@ -567,16 +576,31 @@
                                 <a
                                     href="index.html"
                                     class="nav__link link-action text-uppercase hover-accent"
-                                    >По&nbsp;типам бизнеса</a
-                                >
+                                    >По&nbsp;типам бизнеса
+                                    <svg
+                                        class="icon first-level-icon"
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="/assets/icons/sprite.svg#icon-nose"
+                                        ></use></svg>
+                                    </a>
                             </li>
                             <!-- Первый уровень -->
                             <li class="nav__item nav__item--parent">
                                 <a
                                     href="index.html"
                                     class="nav__link link-action text-uppercase hover-accent"
-                                    >Портфолио и&nbsp;отзывы</a
-                                >
+                                    >Портфолио и&nbsp;отзывы
+                                    <svg
+                                        class="icon first-level-icon"
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="/assets/icons/sprite.svg#icon-nose"
+                                        ></use></svg></a>
                                 <!-- Второй уровень -->
                                 <ul
                                     class="nav__list nav__sublist level-two-only"
@@ -609,7 +633,16 @@
                                 <a
                                     href="index.html"
                                     class="nav__link link-action text-uppercase hover-accent"
-                                    >Обучение</a
+                                    >Обучение
+                                    <svg
+                                        class="icon first-level-icon"
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="/assets/icons/sprite.svg#icon-nose"
+                                        ></use></svg>
+                                    </a></a
                                 >
                             </li>
                             <!-- Первый уровень -->
@@ -617,8 +650,15 @@
                                 <a
                                     href="index.html"
                                     class="nav__link link-action text-uppercase hover-accent"
-                                    >О&nbsp;компании</a
-                                >
+                                    >О&nbsp;компании
+                                    <svg
+                                        class="icon first-level-icon"
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="/assets/icons/sprite.svg#icon-nose"
+                                        ></use></svg></a>
                                 <!-- Второй уровень -->
                                 <ul
                                     class="nav__list nav__sublist level-two-only"
@@ -663,7 +703,7 @@
                             <li class="nav__item">
                                 <a
                                     href="index.html"
-                                    class="nav__link nav__link--contacts link-action text-uppercase hover-accent"
+                                    class="nav__link link-action nav__link--contacts text-uppercase hover-accent"
                                     >Контакты</a
                                 >
                             </li>
