feat: add about__awards

--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
                         >
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                    class="d-flex-between-center flex-column gap-6 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Туроператоров
@@ -968,7 +968,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                    class="d-flex-between-center flex-column gap-6 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Турагентств
@@ -978,7 +978,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                    class="d-flex-between-center flex-column gap-6 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Отелей
@@ -988,7 +988,7 @@
                             </div>
                             <div class="col-6 col-md-3 p-0">
                                 <div
-                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                    class="d-flex-between-center flex-column gap-6 stats__item"
                                 >
                                     <p class="fw-600 color-secondary-font">
                                         Всего
@@ -1004,7 +1004,7 @@
             <!-- About -->
             <section class="about mb">
                 <div class="container">
-                    <div class="about__top d-flex-between-center mb">
+                    <div class="about__top d-flex-between-center">
                         <div class="row g-4 about__content">
                             <div class="col-12 col-md-5 col-lg-12">
                                 <h2 class="title-primary about__title-primary">
@@ -1027,7 +1027,7 @@
                             class="row justify-content-between w-100 wrap-counter"
                         >
                             <div
-                                class="col-6 d-flex-between-center flex-column gap-4 pt-5 pb-4"
+                                class="col-6 d-flex-between-center flex-column gap-4 pt-5 pb-4 counter-item"
                             >
                                 <p class="value-counter">
                                     <span class="stats__value value-counter"
@@ -1044,7 +1044,7 @@
                                 </p>
                             </div>
                             <div
-                                class="col-6 d-flex-center-center flex-column gap-5 py-4 bg-secondary"
+                                class="col-6 d-flex-center-center flex-column gap-6 py-4 bg-secondary counter-item"
                             >
                                 <p class="value-counter">
                                     <span class="stats__value value-counter"
@@ -1068,7 +1068,7 @@
                                 </p>
                             </div>
                             <div
-                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4 bg-secondary"
+                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4 bg-secondary counter-item"
                             >
                                 <p class="stats__value value-counter">28</p>
                                 <p
@@ -1078,7 +1078,7 @@
                                 </p>
                             </div>
                             <div
-                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4"
+                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4 counter-item"
                             >
                                 <p class="stats__value value-counter">1500</p>
                                 <p
@@ -1091,7 +1091,26 @@
                     </div>
                 </div>
                 <div class="about__awards">
-                    <div class="container"></div>
+                    <div class="container">
+                        <ul class="awards d-flex flex-wrap justify-content-between gap-5">
+                            <li class="award-item d-flex-start-center gap-2">
+                                <img src="/assets/svg/win-1.svg" alt="Знак победителя" class="award-item__img">
+                                <p class="award-item__text">Дважды лауреаты премии Лидеры Туриндустрии</p>
+                            </li>
+                            <li class="award-item d-flex-start-center gap-2">
+                                <img src="/assets/svg/win-2.svg" alt="Знак победителя" class="award-item__img">
+                                <p class="award-item__text">Информационный партнер выставок MITT 2012–2025, Крым-сезон, Анапа Самое Яркое Солнце</p>
+                            </li>
+                            <li class="award-item d-flex-start-center gap-2">
+                                <img src="/assets/svg/win-3.svg" alt="Знак победителя" class="award-item__img">
+                                <p class="award-item__text"><span class="award-subtitle">ТОП 3</span><br>Рейтинг разработчиков сайтов туристической тематики</p>
+                            </li>
+                            <li class="award-item d-flex-start-center gap-2">
+                                <img src="/assets/svg/win-4.svg" alt="Знак победителя" class="award-item__img">
+                                <p class="award-item__text"><span class="award-subtitle">ТОП 2</span><br>Рейтинг digital-агентств, работающих с крупнейшими туристическими компаниями</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <!-- About END-->
