feat: add relative positioned icon-title-decor

--- a/index.html
+++ b/index.html
@@ -944,8 +944,8 @@
                 </div>
             </section>
             <!-- Slider End -->
-            <!-- Services Stats -->
-            <section class="services-stats mb">
+            <!-- Services-stats -->
+            <section class="section__services-stats mb">
                 <div class="container">
                     <div
                         class="services-stats__wrap d-flex-between-center flex-column gap-4"
@@ -1000,16 +1000,15 @@
                     </div>
                 </div>
             </section>
-            <!-- Services Stats END-->
+            <!-- Services-stats END-->
             <!-- About -->
-            <section class="about mb">
+            <section class="section__about mb">
                 <div class="container">
+                    <!-- About-top -->
                     <div class="about__top d-flex-between-center">
                         <div class="row g-4 about__content">
                             <div class="col-12 col-md-5 col-lg-12">
-                                <h2 class="title-primary about__title-primary">
-                                    Web разработка<br />в сфере туризма
-                                </h2>
+                                <h2 class="title-primary about__title-primary">Web разработка<br />в сфере туризм<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>а</h2>
                             </div>
                             <div class="col-12 col-md-7 col-lg-12">
                                 <p class="text-body text-about">
@@ -1089,10 +1088,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="about__awards">
-                    <div class="container">
-                        <ul class="awards d-flex flex-wrap justify-content-between gap-5">
+                    <!-- About-top END-->
+                    <!-- About-awards-->
+                    <div class="about__awards">
+                        <ul class="awards__inner d-flex flex-wrap justify-content-between">
                             <li class="award-item d-flex-start-center gap-2">
                                 <img src="/assets/svg/win-1.svg" alt="Знак победителя" class="award-item__img">
                                 <p class="award-item__text">Дважды лауреаты премии Лидеры Туриндустрии</p>
@@ -1111,15 +1110,34 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- About-awards END -->
                 </div>
             </section>
-            <!-- About END-->
+            <!-- /About-->
+            <!-- Services -->
+            <!-- <section class="section__services mb">
+                <div class="container">
+                    <div class="services__inner">
+                        <h2 class="title-secondary">Услуг<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>и</h2>
+                    </div>
+                </div>
+            </section> -->
+            <!-- /Services -->
+            <!-- Portfolio -->
+            <section class="section__portfolio mb">
+                <div class="container">
+                    <div class="portfolio__inner">
+                        <h2 class="title-secondary">Портфоли<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>о</h2>
+                    </div>
+                </div>
+            </section>
+            <!-- /Portfolio-->
         </main>
-        <!-- Main End -->
+        <!-- /Main -->
 
         <!-- Footer -->
         <footer></footer>
-        <!-- Footer End -->
+        <!-- /Footer -->
         <script src="template/lib/swiper/swiper-bundle.min.js"></script>
         <script src="template/js/Mobile-panel.js"></script>
         <script src="template/js/ToggleSubmenu.js"></script>
