feat: add portfolio text typed

--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                                 <h2 class="title-primary about__title-primary">Web разработка<br />в сфере туризм<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>а</h2>
                             </div>
                             <div class="col-12 col-md-7 col-lg-12">
-                                <p class="text-body text-about">
+                                <p class="text-body about__text-body">
                                     Фабрика-турсайтов.рф уже более
                                     15 лет специализируется на разработке
                                     в туристическом секторе. За это время
@@ -1126,8 +1126,12 @@
             <!-- Portfolio -->
             <section class="section__portfolio mb">
                 <div class="container">
-                    <div class="portfolio__inner">
+                    <div class="portfolio__inner d-flex-between-start flex-column">
                         <h2 class="title-secondary">Портфоли<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>о</h2>
+                        <p class="text-body portfolio__text-body">Мы гордимся каждым реализованным проектом и стремимся к высоким результатам. В нашем портфолио более 500 реализованных проектов, включая<br>
+                            <span class="text-typed"><span class="typed-item">42 сайта туроператоров</span><span class="typed-item">410 сайтов турагентств</span><span class="typed-item">71 сайт объектов размещения</span>
+                            </span>
+                        </p>
                     </div>
                 </div>
             </section>
