feat: add portfolio-tabs switchers

--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,39 @@
                             <span class="text-typed"><span class="typed-item">42 сайта туроператоров</span><span class="typed-item">410 сайтов турагентств</span><span class="typed-item">71 сайт объектов размещения</span>
                             </span>
                         </p>
+                        <div class="portfolio__block" id="portfolioTabs">
+                            <div class="portfolio-tabs__switcher" role="tablist">
+                                <ul class="switcher__items d-flex flex-wrap gap-1">
+                                    <li class="switcher__item">
+                                        <button class="btn btn-primary btn-primary-tab" data-category="all" aria-selected="true" title="Все работы">Все работы</button>
+                                    </li>
+                                    <li class="switcher__item">
+                                        <button class="btn btn-secondary btn-tab" data-category="travel-agency" aria-selected="true" title="Сайт для турагенства">Сайт для турагенства</button>
+                                    </li>
+                                    <li class="switcher__item">
+                                        <button class="btn btn-secondary btn-tab" data-category="hotel" aria-selected="true" title="Сайт отеля">Сайт отеля</button>
+                                    </li>
+                                    <li class="switcher__item">
+                                        <button class="btn btn-secondary btn-tab" data-category="service" aria-selected="true" title="Сайт для сервиса">Сайт для сервиса</button>
+                                    </li>
+                                    <li class="switcher__item">
+                                        <button class="btn btn-secondary btn-tab" data-category="landing" aria-selected="true" title="Лендинг">Лендинг</button>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="portfolio__tabs mb-sm-20">
+                                <div class="js-tabs__content portfolio__tab">
+                                    <div class="tab__inner">
+                                        <a href="#" class="tab__item" data-category="hotel" title="Hotel name">
+                                        <!-- карточка -->
+                                        </a>
+                                        <!-- остальные карточки -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
