--- a/ui.html
+++ b/ui.html
@@ -46,6 +46,16 @@
                     <button class="btn btn-secondary">Secondary Button</button>
                     <span>.btn .btn-secondary</span>
                 </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-primary">Tab Primary Button</button>
+                    <span>.btn .btn-primary .btn-primary-tab</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-secondary btn-tab">
+                        Tab Button
+                    </button>
+                    <span>.btn .btn-secondary .btn-tab</span>
+                </div>
             </div>
         </section>
         <section class="mb-4">
