style: add no-tap-highlight

--- a/index.html
+++ b/index.html
@@ -925,25 +925,25 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev d-md-flex">
+                        <div class="swiper-button-prev d-md-flex no-tap-highlight">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
                                 ></use>
                             </svg>
                         </div>
-                        <div class="swiper-button-next d-md-flex">
+                        <div class="swiper-button-next d-md-flex no-tap-highlight">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
                                 ></use>
                             </svg>
                         </div>
-                        <div class="swiper-pagination"></div>
+                        <div class="swiper-pagination no-tap-highlight"></div>
                     </div>
                 </div>
             </section>
-            <!-- Slider End -->
+            <!-- /Slider -->
             <!-- Services-stats -->
             <section class="section__services-stats mb">
                 <div class="container">
