feat: add portfolio-tabs__cards filtration

--- a/index.html
+++ b/index.html
@@ -1203,17 +1203,17 @@
                                 </a>
                                 <a href="#" class="3 link-action portfolio-card" data-category="travel-agency">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агенства «Архитектур»" loading="lazy">
+                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агентства «Архитектур»" loading="lazy">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«Архитектур»</p>
-                                        <p class="hover-category">Туристическое агенство</p>
+                                        <p class="hover-category">Туристическое агентство</p>
                                         <svg class="icon" width="32" height="32">
                                             <use href="/assets/icons/sprite.svg#icon-arrow"></use>
                                         </svg>
                                     </div>
                                 </a>
-                                <a href="#" class="6 link-action portfolio-card--tall" data-category="tour-operator">
+                                <a href="#" class="6 link-action portfolio-card--tall" data-category="tour-operator landing">
                                     <div class="portfolio-card__img">
                                         <img src="/assets/images/portfolio-6.webp" alt="Сайт туроператора «SPb Ticket»" loading="lazy">
                                     </div>
