refactor: change <button> btn-center in <a>

--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <button class="btn btn-primary btn-center">Посмотреть все работы</button>
+                            <a href="#" class="btn btn-primary btn-center">Посмотреть все работы</a>
                         </div>
                     </div>
                 </div>
